# harness-core

./: README.md  WORKSPACE
100-migrator/: BUILD.bazel
120-ng-manager/: BUILD.bazel  config.yml
260-delegate/: BUILD.bazel
270-delegate-service-app/: BUILD.bazel
300-cv-nextgen/: BUILD.bazel
340-ce-nextgen/: BUILD.bazel
350-event-server/: BUILD.bazel  event-service-config.yml
350-event-server/container/: BUILD.bazel
360-cg-manager/: BUILD.bazel  config.yml
380-cg-graphql/: BUILD.bazel
390-db-migration/: BUILD.bazel
400-rest/: BUILD.bazel
420-delegate-service/: BUILD.bazel
440-connector-nextgen/: BUILD.bazel
460-capability/: BUILD.bazel
840-template-service/: BUILD.bazel
865-cg-events/: BUILD.bazel
890-sm-core/: BUILD.bazel
925-subscription-service/: BUILD.bazel
930-ng-license-manager/: BUILD.bazel
950-delegate-tasks-beans/: BUILD.bazel
950-wait-engine/: BUILD.bazel
960-api-services/: BUILD.bazel
960-ng-core-beans/: BUILD.bazel
960-ng-core-beans/src/main/java/io/harness/ng/core/gitsync/: BUILD.bazel
960-ng-core-beans/src/main/java/io/harness/ng/core/notification/: BUILD.bazel
960-ng-core-beans/src/main/java/io/harness/template/beans/refresh/: BUILD.bazel
960-persistence/: BUILD.bazel
970-ng-commons/: BUILD.bazel
980-commons/: BUILD.bazel
access-control/config/: config.yml
access-control/service/: BUILD.bazel
debezium-service/config/: config.yml
dockerization/event-server/: Dockerfile-event-server-cie-jdk  Dockerfile-event-server-jenkins-k8  Dockerfile-event-server-jenkins-k8-gcr  Dockerfile-event-server-jenkins-k8-gcr-openjdk  Dockerfile-event-server-jenkins-k8-openjdk
pipeline-service/service/: BUILD.bazel
platform-service/service/: BUILD.bazel
project/: main_maven_install.json
(+1603 files in other folders)
