load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//970-api-services-beans:module",
        "//970-ng-commons:module",
        "//:lombok",
    ],
)

run_analysis_per_module()

