load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/template:module",
        "//960-ng-core-beans/src/main/java/io/harness/template/beans:module",
        "//980-commons:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)

run_analysis_per_module()

